Add UDT, Agastya and minor improvements

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav default-font">
+          <!-- <sup><span class="badge badge-secondary">New</span></sup> -->
           <a class="nav-item nav-link js-scroll-trigger default-font" href="#">Introduction <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link js-scroll-trigger" href="#experience">Experience <sup><span class="badge badge-secondary">New</span></sup><span class="sr-only"></span></a>
+          <a class="nav-item nav-link js-scroll-trigger" href="#experience">Experience <span class="sr-only"></span></a>
           <a class="nav-item nav-link js-scroll-trigger" href="#education">Academics </a>
           <a class="nav-item nav-link js-scroll-trigger" href="#skills">Skills</a>
           <a class="nav-item nav-link js-scroll-trigger" href="#achievements">Achievements</a>
@@ -184,14 +185,81 @@
     
     <div class = "experience content category" id = "experience">
       <h2 class="heading">Experience</h2>
+
       <div class="my-card exp-entity">
+        <table class="exp-table">
+          <tr>
+            <td class="comp-detail-col-small" style="text-align: center;" >
+              <img class="my-card comp-logo" src="assets/images/exp_company_logo/udt.jpeg"><br>
+              <b>UnDosTres</b>
+              <br>
+              (SDE Intern)
+              <br>
+              <i style="font-size: 13px;"> Mar 2022 - Jun 2022 </i>
+            </td>
+          </tr>
+          <tr>
+            <td class="comp-detail-col-big" style="text-align: center; padding-left: 85px; padding-right: 85px;" >
+              <img class="my-card comp-logo" src="assets/images/exp_company_logo/udt.jpeg"><br>
+              <b>UnDosTres</b>
+              <br>
+              (SDE Intern)
+              <br>
+              <i style="font-size: 13px;"> Mar 2022 - Jun 2022 </i>
+            </td>
+            <td class="comp-desc-col">
+              <ul>
+                <li>COMING SOON</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="my-card exp-entity" style="margin-top: 30px;">
+        <table class="exp-table">
+          <tr>
+            <td class="comp-detail-col-small" style="text-align: center;" >
+              <img class="my-card comp-logo" src="assets/images/exp_company_logo/daffodil.jpg"><br>
+              <b>Daffodil Softwares Pvt. Ltd.</b>
+              <br>
+              (Software Engineer Intern)
+              <br>
+              <i style="font-size: 13px;"> Oct 2021 - Feb 2022 </i>
+            </td>
+          </tr>
+          <tr>
+            <td class="comp-detail-col-big" style="text-align: center;" >
+              <img class="my-card comp-logo" src="assets/images/exp_company_logo/daffodil.jpg"><br>
+              <b>Daffodil Softwares Pvt. Ltd.</b>
+              <br>
+              (Software Engineer Intern)
+              <br>
+              <i style="font-size: 13px;"> Oct 2021 - Feb 2022 </i>
+            </td>
+            <td class="comp-desc-col">
+              <ul>
+                <li>Learned <b>Java, Spring Boot, Hibernate, ORM</b>.</li>
+                <li>Learned about full life cycle of Software Development</li>
+                <li>Made a clone of BookMyShow platform.</li>
+                <li>Learned and practiced "Clean Code".</li>
+                <li>Designed a HLD of BookMyShow.</li>
+                <li>Learned and <b>worked in a team</b>.</li>
+                <li>Practiced some communication improvement activities.</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="my-card exp-entity" style="margin-top: 30px;">
         <table class="exp-table">
           <tr>
             <td class="comp-detail-col-small" style="text-align: center;" >
               <img class="my-card comp-logo" src="assets/images/exp_company_logo/pva_logo.jpg"><br>
               <b>Parallax Virtual Arts</b>
               <br>
-              (Android Developer)
+              (Android Developer Intern)
               <br>
               <i style="font-size: 13px;"> Apr 2020 - Nov 2020 </i>
             </td>
@@ -201,7 +269,7 @@
               <img class="my-card comp-logo" src="assets/images/exp_company_logo/pva_logo.jpg"><br>
               <b>Parallax Virtual Arts</b>
               <br>
-              (Android Developer)
+              (Android Developer Intern)
               <br>
               <i style="font-size: 13px;"> Apr 2020 - Nov 2020 </i>
             </td>
@@ -232,7 +300,7 @@
           <td class="edu-data my-card">
             Bachelor Degree<br>
             <div class="lower-font">
-              August 2018 - Present
+              August 2018 - July 2022
             </div>
           </td>
           <td class="edu-data my-card">
@@ -240,7 +308,7 @@
 
             <hr class="my-seperator">
             <div class="lower-font">
-              BTech. (Computer Science and Engineering)<br>
+              BTech. Hons.(Computer Science and Engineering)<br>
               Percentage - 80%
             </div>
           </td>
@@ -554,6 +622,46 @@
                   <img src="assets/images/misc/gp_2.png" style="height: 32px;
                   width: 32px" />
                 <!-- </div> -->
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-entity my-card">
+          <div style="position: relative;">
+            <img src="assets/images/project_images/agastya_banner.png">
+          </div>
+          <div class="content">
+
+            <h3 style="font-weight: bolder;">Agastya</h3>
+            <ul>
+
+              <li>Agastya - COVID 19 Chest XRAY Scanner.</li>
+              <li>Android Application, Web Portal, ML Model, API</li>
+              <li>PDF report containing all the necessary details.</li>
+              <li>Tools and Technology used - Anaconda,
+                Tensorflow,
+                Scikit learn,
+                Python version 3.7,
+                JAVA 11,
+                Android Studio 4.3,
+                PHP,
+                000webhost server, MySQL
+                </li>
+            </ul>
+            <!-- <a href="">more...</a> -->
+            <div style="position: absolute; bottom: 5px; right: 0px;">
+              <!-- <a href="https://github.com/ritikkanotra/coronavirus-tracker-android-app" target="_blank" style="position: absolute; right: 70px;">
+                <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
+                  <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
+                  width: 32px" />
+                </div>
+              </a> -->
+              <a href="https://github.com/ritikkanotra/Agastya_Android" target="_blank" style="position: absolute; right: 10px;">
+                <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px">
+                  <img src="https://img.icons8.com/fluent/48/000000/github.png" style="height: 32px;
+                  width: 32px" />
+                </div>
               </a>
             </div>
           </div>
