add content in undostres exp, disabled whatsapp no.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
           <div class="social-media social-media-card horizontal-center my-card">
             <a href="mailto:ritikkanotra@gmail.com" target="_blank"><img src="assets/images/sm_icons_dark/google-3560850.svg" alt="Email" /></a>
-            <a href="https://wa.me/+916388490224" target="_blank"><img src="assets/images/sm_icons_dark/whatsapp-3560884.svg" alt="Whatsapp" /></a>
+            <a href="https://wa.me/+91638xxxxxxx" style="pointer-events: none" target="_blank"><img src="assets/images/sm_icons_dark/whatsapp-3560884.svg" alt="Whatsapp" /></a>
             <a href="https://www.github.com/ritikkanotra" target="_blank"><img src="assets/images/sm_icons_dark/github-3560849.svg" alt="GitHub"/></a>
             <!-- <a href="https://www.codeivation.blogspot.com"><img src="https://img.icons8.com/material-two-tone/48/000000/blog.png" alt="Blog"/></a> -->
             <a href="https://www.linkedin.com/in/ritikkanotra/" target="_blank"><img src="assets/images/sm_icons_dark/linkedin-3560871.svg" alt="Linkedin" /></a>
@@ -209,7 +209,14 @@
             </td>
             <td class="comp-desc-col">
               <ul>
-                <li>COMING SOON</li>
+                <li>UnDosTres is a leading <b>FinTech</b> brand in <b>Mexico</b>.</li>
+                <li>Learned about key componenets of existing UnDosTres System.</li>
+                <li>Created various <b>APIs</b> for new features from <b>scratch</b>.</li>
+                <li>Solved critical bugs in production environment.</li>
+                <li>Implement <b>Idempotency</b> to avoid duplicate payments.</li>
+                <li>Implement the feature to edit the user's profile.</li>
+                <li>Did a lot of <b>reaserach</b> for new features.</li>
+                <li>Tools & Technologies used - <b>PHP</b>, HTML, CSS, JS, AWS.</li>
               </ul>
             </td>
           </tr>
@@ -300,7 +307,7 @@
           <td class="edu-data my-card">
             Bachelor Degree<br>
             <div class="lower-font">
-              August 2018 - July 2022
+              August 2018 - June 2022
             </div>
           </td>
           <td class="edu-data my-card">
