--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <a class="nav-item nav-link js-scroll-trigger" href="#achievements">Achievements</a>
           <a class="nav-item nav-link js-scroll-trigger" href="#projects">Projects</a>
           <a class="nav-item nav-link js-scroll-trigger" href="#contact">Contact</a>
+          <a class="nav-item nav-link js-scroll-trigger" href="https://blog.ritikkanotra.com" target="_blank">Blogs</a>
           <!-- <a class="nav-item nav-link js-scroll-trigger my-card skill-card resume-download-btn" href="https://urlf.in/ritikkanotra_resume" target="_blank">Resume</a> -->
           <!-- <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
         
@@ -154,7 +155,7 @@
             <span
               class="txt-rotate"
               data-period="2000"
-              data-rotate='[ "tech-savvy.", "geek.", "Android Developer.", "Web Developer.", "Problem Solver.", "Competitive Programmer.", "Flask(er).", "programmer."]'>
+              data-rotate='[ "tech-savvy.", "geek.", "Android Developer.", "Web Developer.", "Problem Solver.", "Competitive Programmer.", "Flask(er).", "programmer.", "Spring Boot(er)."]'>
             </span>
           </div>
           </h2>
@@ -199,15 +200,28 @@
             </td>
           </tr>
           <tr>
-            <td class="comp-detail-col-big" style="text-align: center; padding-left: 85px; padding-right: 85px;" >
+            <td class="comp-detail-col-big" style="text-align: center; padding-left: 85px; padding-right: 65px;" >
               <img class="my-card comp-logo" src="assets/images/exp_company_logo/udt.jpeg"><br>
-              <b>UnDosTres</b>
+              <b>UnDosTres, Mexico</b>
+              <br>
+              (SDE)
+              <br>
+              <i style="font-size: 13px;"> Jul 2022 - Present </i>
               <br>
               (SDE Intern)
               <br>
               <i style="font-size: 13px;"> Mar 2022 - Jun 2022 </i>
             </td>
             <td class="comp-desc-col">
+              <ul>
+                <li>Resolved bugs and added new features in <b>Facebook Bot</b>.</li>
+                <li>Researched and <b>fixed</b> a lot of <b>bugs</b>.</li>
+                <li>Added new features like <b>edit profile, Admin Invoice portal, Refunds</b> etc.</li>
+                <li>Involved in <b>revamp</b> of UnDosTres and <b>microservices</b> architecture.</li>
+                <li>Added new features like <b>OAuth2, Middleware, Packages, Invoice</b> etc.</li>
+                <li>Added <b>documentation</b> for new features implemented.</li>
+                <li>Tools & Technologies used: Java, <b>Spring Boot</b>, Spring Data, MySQL, AWS.</li>
+              </ul>
               <ul>
                 <li>UnDosTres is a leading <b>FinTech</b> brand in <b>Mexico</b>.</li>
                 <li>Learned about key componenets of existing UnDosTres System.</li>
@@ -316,7 +330,7 @@
             <hr class="my-seperator">
             <div class="lower-font">
               BTech. Hons.(Computer Science and Engineering)<br>
-              Percentage - 80%
+              Percentage - 85%
             </div>
           </td>
         </tr>
@@ -356,6 +370,12 @@
     </div>
     <div class = "skills content category" id="skills">
       <h2 class="heading">Skills</h2>
+      <div class="skill horizontal-center">
+        <p>Backend Development</p>
+        <div class="progress" style="height: 10px;">
+          <div class="progress-bar bg-purple" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
       <div class="skill horizontal-center">
         <p>Android Development</p>
         <div class="progress" style="height: 10px;">
@@ -414,9 +434,6 @@
         MySql
       </div>
       <div class="skill-card my-card">
-        PHP
-      </div>
-      <div class="skill-card my-card">
         Database
       </div>
       <div class="skill-card my-card">
@@ -448,6 +465,18 @@
       </div>
       <div class="skill-card my-card">
         Javascript
+      </div>
+      <div class="skill-card my-card">
+        Spring Boot
+      </div>
+      <div class="skill-card my-card">
+        Spring Data
+      </div>
+      <div class="skill-card my-card">
+        AWS
+      </div>
+      <div class="skill-card my-card">
+        Microservices
       </div>
 
     </div>
