--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       <div class="skill horizontal-center">
         <p>Backend Development</p>
         <div class="progress" style="height: 10px;">
-          <div class="progress-bar bg-purple" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
       <div class="skill horizontal-center">
