add UDT changes in mobile website

--- a/index.html
+++ b/index.html
@@ -192,7 +192,11 @@
           <tr>
             <td class="comp-detail-col-small" style="text-align: center;" >
               <img class="my-card comp-logo" src="assets/images/exp_company_logo/udt.jpeg"><br>
-              <b>UnDosTres</b>
+              <b>UnDosTres, Mexico</b>
+              <br>
+              (SDE)
+              <br>
+              <i style="font-size: 13px;"> Jul 2022 - Present </i>
               <br>
               (SDE Intern)
               <br>
