replace http with https for wave images

--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
       <div class="intro-bg-big">
         <div class="waveWrapper waveAnimation">
           <div class="waveWrapperInner bgTop">
-            <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')"></div>
+            <div class="wave waveTop" style="background-image: url('https://front-end-noobs.com/jecko/img/wave-top.png')"></div>
           </div>
           <div class="waveWrapperInner bgMiddle">
-            <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')"></div>
+            <div class="wave waveMiddle" style="background-image: url('https://front-end-noobs.com/jecko/img/wave-mid.png')"></div>
           </div>
           <div class="waveWrapperInner bgBottom">
-            <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')"></div>
+            <div class="wave waveBottom" style="background-image: url('https://front-end-noobs.com/jecko/img/wave-bot.png')"></div>
           </div>
         </div>
       </div>
@@ -801,7 +801,7 @@
                   width: 32px" />
                 </div>
               </a> -->
-              <a href="http://csbookshelf.herokuapp.com/" target="_blank" style="display: inline-block;">
+              <a href="https://csbookshelf.herokuapp.com/" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/domain.png" style="height: 32px;
                     width: 32px" />
@@ -837,7 +837,7 @@
                   width: 32px" />
                 </div>
               </a>
-              <a href="http://devpost1.herokuapp.com/" target="_blank" style="display: inline-block;">
+              <a href="https://devpost1.herokuapp.com/" target="_blank" style="display: inline-block;">
                 <div class="skill-card card" style="background-color: #FFFFFF; padding: 0px; margin: 5px;">
                     <img src="https://img.icons8.com/color/48/000000/domain.png" style="height: 32px;
                     width: 32px" />
