--- a/index.html
+++ b/index.html
@@ -191,12 +191,47 @@
         <table class="exp-table">
           <tr>
             <td class="comp-detail-col-small" style="text-align: center;" >
+              <img class="my-card comp-logo" src="assets/images/exp_company_logo/vitrayatech_logo.jpeg"><br>
+              <b>Vitraya Technologies</b>
+              <br>
+              (Software Engineer)
+              <br>
+              <i style="font-size: 13px;"> Sep 2023 - Present </i>
+            </td>
+          </tr>
+          <tr>
+            <td class="comp-detail-col-big" style="text-align: center; padding-left: 80px; padding-right: 75px;" >
+              <img class="my-card comp-logo" src="assets/images/exp_company_logo/vitrayatech_logo.jpeg"><br>
+              <b>Vitraya Technologies</b>
+              <br>
+              (Software Engineer)
+              <br>
+              <i style="font-size: 13px;"> Sep 2023 - Present </i>
+            </td>
+            <td class="comp-desc-col">
+              <ul>
+                <li>Pioneered <b>transformative health-tech projects</b>, integrating <b>NHCX</b> with insurers and demonstrating to the government, revolutionizing India's healthcare landscape.</li>
+                <li>Seamlessly orchestrated <b>API integrations with third-party administrators</b>, streamlining data flow and enhancing insurers' operational efficiency.</li>
+                <li>Spearheaded deployment strategies, ensuring smooth rollouts for <b>optimized</b> system performance, driving Vitraya's technological advancement.</li>
+                <li><b>Collaborated</b> extensively with diverse teams, fostering innovation and driving technological breakthroughs in India's health and insurance sectors.</li>
+                <li>Employed Linux, <b>Spring Boot</b>, MySQL for robust POC projects, showcasing Vitraya Technologies' technological prowess.</li>
+                <li>Engineered solutions embraced by <b>5000+ hospitals</b>, processing <b>over 10,000 daily claims</b>, reshaping healthcare claims processing in India.</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="my-card exp-entity" style="margin-top: 30px;">
+        <table class="exp-table">
+          <tr>
+            <td class="comp-detail-col-small" style="text-align: center;" >
               <img class="my-card comp-logo" src="assets/images/exp_company_logo/udt.jpeg"><br>
               <b>UnDosTres, Mexico</b>
               <br>
               (SDE)
               <br>
-              <i style="font-size: 13px;"> Jul 2022 - Present </i>
+              <i style="font-size: 13px;"> Jul 2022 - Aug 2023 </i>
               <br>
               (SDE Intern)
               <br>
@@ -210,7 +245,7 @@
               <br>
               (SDE)
               <br>
-              <i style="font-size: 13px;"> Jul 2022 - Present </i>
+              <i style="font-size: 13px;"> Jul 2022 - Aug 2023 </i>
               <br>
               (SDE Intern)
               <br>
